word-wrap; fix downloadButton

--- a/app/assets/stylesheets/surveys.css.less
+++ b/app/assets/stylesheets/surveys.css.less
@@ -34,6 +34,11 @@
 	padding-bottom: 0.5em;
 	font-weight: bold;
 }
+
+#survey-table td {
+	width: 50%;
+}
+
 .pointer {
   cursor: pointer;
 }
@@ -57,22 +62,31 @@
 	}
 }
 
-#selectable { 
+.selectable { 
 	list-style-type: none; 
 	margin: 0; 
 	padding: 0; 
 }
 
-#selectable li { 
+.selectable li { 
 	border: 1px solid LightGray; 
-	margin: 3px; 
 	padding: 0.4em; 
+	margin-top: 6px;
+	margin-bottom: 6px;
 	text-align: center; 
 	border-radius: 5px;
+	word-wrap: break-word;
+}
+
+.leftOptions {
+	margin-right: 2px;
+}
+
+.rightOptions {
+	margin-left: 2px;
 }
 
 .select-result {
-	width:100%;
 	padding: 0em; 
 	margin: 0px;
 }
@@ -86,7 +100,23 @@
 	border-radius: 5px;
 }
 
-#remove-btn {
+.selected_left {
+	width:45%; 
+	word-break: break-all; 
+	padding-top: 5px; 
+	padding-bottom: 5px; 
+	padding-left: 10px;
+}
+
+.selected_right {
+	width:45%; 
+	word-break: break-all; 
+	padding-top: 5px; 
+	padding-bottom: 5px; 
+	padding-right: 5px;
+}
+
+.remove-btn {
    -moz-box-shadow:    inset 0 0 2px #000000;
    -webkit-box-shadow: inset 0 0 2px #000000;
    box-shadow:         inset 0 0 2px #000000;
@@ -223,17 +253,24 @@
 	}
 }
 
+
 /* ========================================
     RESULT TABLE
 ======================================== */
 
+#result-table {
+	table-layout:fixed;
+}
+
 #result-table th {
 	text-align: center; 
     vertical-align: middle;	
+    word-wrap: break-word;
 }
 
-#result-table td {
+#result-table-td {
     text-align: center; 
+    word-wrap: break-word;
     margin: 0px !important;
     padding: 0px !important;
 }
@@ -243,6 +280,6 @@
     padding: 0px !important;	
 }
 
-.isCorrect {
-	border: 2px solid green !important;
+.greenBorder {
+	border: 3px solid green !important;
 }
